fastrace-macro/tests/ui/err/trace-interleaved.stderr
error: expected identifier, found keyword `struct`
 --> tests/ui/err/trace-interleaved.rs:6:9
  |
6 | #[trace(struct)]
  |         ^^^^^^
